--- a/page.html
+++ b/page.html
@@ -6,6 +6,6 @@
 <body>
   <h1>This is my repository.. --  --</h1>
   <h1>Main conflict</h1>
-  <h1>Pull </h1>
+  <h1>Pull conflict </h1>
 </body>
 </html>
